fix: mobile look on smaller screens

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,7 +24,7 @@ body {
     justify-content: flex-end;
     margin-top: 56px;
     @media (max-width: $mobile) {
-      justify-content: center;
+        justify-content: center;
     }
 }
 
@@ -51,10 +51,11 @@ body {
         "header description"
         "form description";
     @media (max-width: $mobile) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
     &__description {
         grid-area: description;
@@ -63,7 +64,11 @@ body {
         font-size: 14px;
         line-height: 24px;
         @media (max-width: $mobile) {
-          writing-mode: unset;
+            writing-mode: unset;
+            display: block;
+            margin-left: 0;
+            margin-right: 0;
+            font-size: 12px;
         }
     }
     &__form {
@@ -72,9 +77,9 @@ body {
         margin-left: 96px;
         margin-top: 22px;
         @media (max-width: $mobile) {
-          display: block;
-          margin: 100px 0 0 0;
-          width: 90%;
+            display: block;
+            margin: 100px 0 0 0;
+            width: 90%;
         }
     }
 }
@@ -94,7 +99,7 @@ body {
         font-style: normal;
         font-weight: normal;
         @media (max-width: $mobile) {
-          width: 100%;
+            width: 100%;
         }
         &::placeholder {
             padding-left: 18px;
@@ -123,7 +128,8 @@ body {
         line-height: 64px;
         font-weight: 600;
         @media (max-width: $mobile) {
-          margin: 50px 0 0 0;
+            font-size: 36px;
+            margin: 50px 0 0 0;
         }
     }
 }
